fix: get things actually working hopefully (minus tests)